--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "TempMail",
+	"name": "SRC Z3EIM ",
 	"description": "A TeleGramBot to send messages secretly!",
 	"logo": "https://telegra.ph/file/5116db79f852db113875c.jpg",
 	"keywords": [
